--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@import "main.css";
 @import url(font-awesome.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 @font-face {
@@ -123,8 +122,9 @@
 
 .profile_img_block{
     width: 100px;
+    text-align: center;
 }
 .profile_img_block img{
-   width: 100%;
+   width: 70px;
     height: auto;
 }
